# transcoder

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: tauri_release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: About.svelte  api.js  history.js
src/routes/: +page.svelte
