[package]
name = "transcoder"
version = "0.2.0"
description = "Transcoder — gestion de listes de codes médicaux"
authors = ["Guillaume Pressiat"]
edition = "2021"

# [lib]
# name = "transcoder_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "transcoder"
# path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
